WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68481
White flash when entering full-screen using element.webkitRequestFullScreen()
https://bugs.webkit.org/show_bug.cgi?id=68481
Summary
White flash when entering full-screen using element.webkitRequestFullScreen()
Tony Sung
Reported
2011-09-20 15:16:32 PDT
Created
attachment 108062
[details]
Primary Test Case Steps to reproduce: 1. Ensure WebKit has "Use Multi-process Windows" on from the Debug menu (default). 2. Open the attached test case 3. Double click the window area to enter full-screen Expected result: The screen turns black and then shows the red square in the middle. Actual result: The screen turns black, and then flashes into white momentarily, before turning black again and showing the red square in the middle.
Attachments
Primary Test Case
(330 bytes, text/html)
2011-09-20 15:16 PDT
,
Tony Sung
no flags
Details
Patch
(4.19 KB, patch)
2011-09-26 11:01 PDT
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Harrison
Comment 1
2011-09-21 08:58:06 PDT
rdar://10156362
Jer Noble
Comment 2
2011-09-26 11:01:32 PDT
Created
attachment 108688
[details]
Patch
Jer Noble
Comment 3
2011-09-26 12:51:27 PDT
Committed
r95978
: <
http://trac.webkit.org/changeset/95978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug