White flash when entering full-screen using element.webkitRequestFullScreen() https://bugs.webkit.org/show_bug.cgi?id=68481

Reviewed by Simon Fraser.

Source/WebCore:

No new tests; covered by existing full screen tests.

During an animation, renderers may try to paint into the FullScreenRenderer's
GraphicsLayer, and an optimization we previously added for the FullScreenRenderer's
background will cause these paints to fail. Remove this optimization in
containsPaintedContent, and taking non-composited elements into full screen will
animate correctly.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::containsPaintedContent):

Source/WebKit2:

Do not re-enable screen updates after exiting compositing mode until a repaint has completed.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController exitAcceleratedCompositingMode]):
(continueExitCompositingModeAfterRepaintCallback):
(-[WKFullScreenWindowController _continueExitCompositingModeAfterRepaint]):

Canonical link: https://commits.webkit.org/84787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95978 268f45cc-cd09-0410-ab3c-d52691b4dbfc